<resources>
    <string name="app_name">Eco Localização</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="about">Eco Localização tem como objetivo te ajudar a encontrar pontos de coletas em sua cidade.\n\nEste aplicativo e o site são de código aberto, sob licença MIT.\n\nO código pode ser encontrado em https://github.com/aron-bordin/Recicla-Ponto-de-Coleta</string>
    <string name="me">Projeto desenvolvido por Aron Barreira Bordin
        \n\naron.bordin@gmail.com
        \nhttp://aronbordin.com
        \nhttp://blog.rhesoft.com</string>
    <string name="oleo">Óleo de Cozinha</string>
    <string name="pilhas">Pilhas e Baterias</string>
    <string name="plastico">Plástico</string>
    <string name="metal">Metal</string>
    <string name="papel">Papel</string>
    <string name="vidro">Vidro</string>
    <string name="todos">Todos</string>
    <string name="by">Desenvolvido por Aron Barreira Bordin</string>
    <string name="title_activity_asasdasd">asasdasdActivity</string>
    <string name="gps_desativado">Para utilizar as funções de localização, ative seu GPS</string>
</resources>
