<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MenuActivity"
    tools:showIn="@layout/activity_menu">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="26dp" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btnOleo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/oleo"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/item_oleo"
            custom:pb_colorError="@color/item_oleo"
            custom:pb_colorNormal="@color/item_oleo"
            custom:pb_colorPressed="@color/item_oleo"
            custom:pb_colorProgress="@color/item_oleo"
            custom:pb_textComplete="Pronto!"
            custom:pb_textProgress="Carregando..."
            android:onClick="onClick" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btnPilha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/pilhas"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/item_pilha"
            custom:pb_colorError="@color/item_pilha"
            custom:pb_colorNormal="@color/item_pilha"
            custom:pb_colorPressed="@color/item_pilha"
            custom:pb_colorProgress="@color/item_pilha"
            custom:pb_textComplete="Pronto!"
            custom:pb_textProgress="Carregando..."
            android:onClick="onClick"/>

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btnPlastico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/plastico"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/item_plastico"
            custom:pb_colorError="@color/item_plastico"
            custom:pb_colorNormal="@color/item_plastico"
            custom:pb_colorPressed="@color/item_plastico"
            custom:pb_colorProgress="@color/item_plastico"
            custom:pb_textComplete="Pronto!"
            custom:pb_textProgress="Carregando..."
            android:onClick="onClick"/>

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btnMetal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/metal"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/item_metal"
            custom:pb_colorError="@color/item_metal"
            custom:pb_colorNormal="@color/item_metal"
            custom:pb_colorPressed="@color/item_metal"
            custom:pb_colorProgress="@color/item_metal"
            custom:pb_textComplete="Pronto!"
            custom:pb_textProgress="Carregando..."
            android:onClick="onClick"/>

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btnPapel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/papel"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/item_papel"
            custom:pb_colorError="@color/item_papel"
            custom:pb_colorNormal="@color/item_papel"
            custom:pb_colorPressed="@color/item_papel"
            custom:pb_colorProgress="@color/item_papel"
            custom:pb_textComplete="Pronto!"
            custom:pb_textProgress="Carregando..."
            android:onClick="onClick"/>

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btnVidro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/vidro"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/item_vidro"
            custom:pb_colorError="@color/item_vidro"
            custom:pb_colorNormal="@color/item_vidro"
            custom:pb_colorPressed="@color/item_vidro"
            custom:pb_colorProgress="@color/item_vidro"
            custom:pb_textComplete="Pronto!"
            custom:pb_textProgress="Carregando..."
            android:onClick="onClick" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btnTodos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="14dp"
            android:text="@string/todos"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            custom:pb_colorComplete="@color/item_todos"
            custom:pb_colorError="@color/item_todos"
            custom:pb_colorNormal="@color/item_todos"
            custom:pb_colorPressed="@color/item_todos"
            custom:pb_colorProgress="@color/item_todos"
            custom:pb_textComplete="Pronto!"
            custom:pb_textProgress="Carregando..."
            android:onClick="onClick" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/by"
        android:gravity="bottom|center_horizontal"
        android:paddingBottom="5dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgHelp"
        android:layout_gravity="top|end"
        android:src="@drawable/ic_help"
        android:background="@android:color/transparent"
        android:padding="5dp"
        android:onClick="onClick" />
</FrameLayout>
